Fix: Hide textarea scrollbars without miss the scroll functionality. closes #28

--- a/styles/global.sass
+++ b/styles/global.sass
@@ -6,6 +6,7 @@
 ::-webkit-scrollbar
   width: $scrollbar-width
   height: $scrollbar-width
+  cursor: pointer
 
 ::-webkit-scrollbar-corner
   background: $bg-dark
@@ -21,3 +22,4 @@
 
 ::-webkit-scrollbar-thumb:hover 
   background: $mangool
+  cursor: pointer
